# server-monitor

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: agent.example.toml  local-dashboard.example.toml  servers.example.toml
docs/: 2026-03-13-ui-ux-debug-review.md  README.md  roadmap-v1-future-path.md
docs/superpowers/plans/: 2026-03-10-agentless-monitor-dashboard-v1.md  2026-03-10-monitor-ui-density-redesign-a1.md  2026-03-10-safe-git-ops-v1.md  2026-03-10-server-monitor-dashboard-v1.md  2026-03-10-v11-clash-reachability.md  2026-03-10-v11-freshness-badges.md  2026-03-11-dashboard-ui-add-card-collapse-adjustment.md  2026-03-11-dashboard-ui-premium-refinement.md  2026-03-11-dashboard-ui-visual-optimization.md  2026-03-11-remove-legacy-agent.md  (+10 more)
scripts/: install-dashboard-task.ps1  install-dashboard-user-service.sh  start-dashboard.ps1  start-dashboard.sh  stop-dashboard.ps1  stop-dashboard.sh
src/server_monitor/agent/: api.py  (+6 more)
tests/: test_cli.py  test_import_smoke.py  test_linux_scripts.py  test_runtime_import.py  test_windows_scripts.py
tests/agent/: test_api.py  test_collectors.py  test_command_runner.py  test_repo_collector_commands.py  test_runtime_hooks.py  test_snapshot_store.py
tests/dashboard/: test_app_runtime_hooks.py  test_batch_protocol.py  test_clash_tunnel.py  test_command_policy.py  test_diagnostics_api.py  test_legacy_cleanup.py  test_metrics_stream_command.py  test_metrics_stream_manager.py  test_metrics_stream_protocol.py  test_normalize.py  test_persistent_session.py  test_poller.py  test_runtime.py  test_runtime_helpers.py  test_settings_api.py  test_settings_store.py  test_ssh_tunnel.py  test_static_app_behavior.py  test_static_routes.py  test_terminal_launcher.py  test_ws_hub.py
tests/e2e/: test_dashboard_flow.py  test_dashboard_websocket_runtime.py
tests/shared/: test_models.py
(+98 files in other folders)
