[project]
name = "server-monitor-codex"
version = "0.1.0"
description = "Read-only dashboard for monitoring two GPU cloud servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.1",
    "tomli-w>=1.2.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
