[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "server-monitor-codex"
version = "0.1.0"
description = "Read-only dashboard for monitoring two GPU cloud servers"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Server Monitor Codex Contributors" },
]
keywords = [
    "dashboard",
    "fastapi",
    "gpu",
    "monitoring",
    "ssh",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.1",
    "tomli-w>=1.2.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[project.scripts]
server-monitor-dashboard = "server_monitor.dashboard.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/server_monitor"]
